--- a/gleam.toml
+++ b/gleam.toml
@@ -19,6 +19,7 @@ pocket_watch = ">= 1.0.0 and < 2.0.0"
 gary = ">= 1.1.0 and < 2.0.0"
 gleam_erlang = ">= 1.0.0 and < 2.0.0"
 gleamy_structures = ">= 1.2.0 and < 2.0.0"
+gleam_deque = ">= 1.0.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
