--- a/gleam.toml
+++ b/gleam.toml
@@ -16,10 +16,10 @@ version = "1.0.0"
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
 gladvent = ">= 2.2.1 and < 3.0.0"
 pocket_watch = ">= 1.0.0 and < 2.0.0"
-gary = ">= 1.1.0 and < 2.0.0"
 gleam_erlang = ">= 1.0.0 and < 2.0.0"
 gleamy_structures = ">= 1.2.0 and < 2.0.0"
 gleam_deque = ">= 1.0.0 and < 2.0.0"
+iv = ">= 1.3.3 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
