--- a/gleam.toml
+++ b/gleam.toml
@@ -20,6 +20,7 @@ gleam_erlang = ">= 1.0.0 and < 2.0.0"
 gleamy_structures = ">= 1.2.0 and < 2.0.0"
 gleam_deque = ">= 1.0.0 and < 2.0.0"
 iv = ">= 1.3.3 and < 2.0.0"
+gleam_regexp = ">= 1.1.1 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
